HREPTWO-3670: Readable URLs: meaning of checkbox should be clarified https://issues.onehippo.com/browse/HREPTWO-3670 - implemented Rolfs proposal.
svn path=/hippo-ecm/trunk/; revision=21822

--- a/cms/package/skin/src/main/webapp/screen.css
+++ b/cms/package/skin/src/main/webapp/screen.css
@@ -474,7 +474,7 @@ background-image:url(images/box-blue2.png);}
 /* Picker General Styling */
 .hippo-picker{background: url("images/picker-back.png") repeat-y; height: 356px;}
 .hippo-picker-tree{width: 193px; float: left;} 
-.hippo-picker-tree .hippo-tree{height: 255px; width: 193px}
+.hippo-picker-tree .hippo-tree{ height: 255px; width: 193px; }
 .hippo-picker-list-details{height: 331px; margin-left: 194px; background: #ffffff url('images/silverBack3.png') repeat-x; width: auto; position: relative; overflow: auto}
 .hippo-picker-properties{clear:both; height: 35px; padding: 10px; margin-top:0px; border-top: 1px solid #afafaf;}
 .hippo-picker .hippo-list-details .hippo-list-paging td{width: 630px; text-align: right;}
@@ -1361,6 +1361,7 @@ body.hippo-root div.yui-log-container {
 
 .hippo-window-form td input.grayedout { background-color: #F4F4F4; }
 .hippo-window-form td input.grayedin { }
+.hippo-window-form td a.action {color: #107EC0; width: 38px; float:right; margin-right: 10px; margin-top: 6px;}
 
 div.rte-preview-area { cursor: pointer; padding: 5px; background-color: transparent;}
 
